# repo-context-for-ai

./: .gitignore  CMakeLists.txt  README.md  cmd arguments.txt  main.cpp
.github/workflows/: windows-build.yml
client/: parse_flags.hpp
directory_tree/: directory_tree.cpp  directory_tree.hpp
file_records/: filesystem_node.cpp  filesystem_node.hpp  folder_rep.cpp  folder_rep.hpp
misc/: get_content_from_files.hpp  get_root_name.hpp
readme_subfolder/: CI-integrations.md  CMake.md
test_repurposing/: test_util.hpp  tests.hpp
text_tree/: placed_line.cpp  placed_line.hpp  text_tree.cpp  text_tree.hpp
traversals/: traversals_content_roots.hpp  traversals_string_tree.hpp
